# mcp-context-forge-plugin

./: .env.template  .gitignore  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
resources/plugins/: config.yaml
src/denylist/: __init__.py  deny.py
src/plugins/framework/mcp/: __init__.py  server.py
